--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>propertysource</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>spring-commons-cli-propertysource</name>
-    <description>spring-commons-cli-propertysource</description>
+    <description>Spring Framework CommandLinePropertySource implementation backed by Apache Commons CLI.</description>
     <properties>
         <java.version>17</java.version>
     </properties>
