--- a/pom.xml
+++ b/pom.xml
@@ -2,31 +2,38 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.0.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>de.wadndadn.springcommonscli</groupId>
     <artifactId>propertysource</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+
     <name>spring-commons-cli-propertysource</name>
     <description>Spring Framework CommandLinePropertySource implementation backed by Apache Commons CLI</description>
     <url>https://github.com/wadndadn/spring-commons-cli-propertysource</url>
+
     <licenses>
         <license>
             <name>Apache License, Version 2.0</name>
             <url>https://www.apache.org/licenses/LICENSE-2.0</url>
         </license>
     </licenses>
+
     <scm>
         <url>https://github.com/wadndadn/spring-commons-cli-propertysource</url>
     </scm>
+
     <properties>
         <java.version>17</java.version>
         <commons-cli.version>1.5.0</commons-cli.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -37,6 +44,7 @@
             <artifactId>commons-cli</artifactId>
             <version>${commons-cli.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -64,6 +72,7 @@
             <plugin>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
             </plugin>
         </plugins>
     </build>
